Lots of changes

--- a/src/app/components/switch.module.css
+++ b/src/app/components/switch.module.css
@@ -1,7 +1,6 @@
 .switch {
   all: unset;
   display: inline-flex;
-  color: white;
   border-radius: 50%;
   border: none;
   cursor: pointer;
@@ -13,15 +12,15 @@
   justify-content: center;
 }
 
-.moonIcon {
+.themeIcon {
   transition: transform 0.3s ease;
 }
 
-.switch:hover .moonIcon {
+.switch:hover .themeIcon {
   transform: rotate(15deg);
 }
 
-.switch.clicked .moonIcon {
+.switch.clicked .themeIcon {
   transform: rotate(30deg);
 }
 /* 
